Fixed spacing on homepage and aboutpage

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,8 @@
-h1{
+h1 {
     font-size: 50px;
+}
+
+div {
+    width: 90%;
+    margin: auto;
 }
